kubernetes/apps/media/radarr/config/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/hostname: radarr.krapulax.dev
    external-dns.alpha.kubernetes.io/target: external.krapulax.dev
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - radarr.krapulax.dev
  rules:
    - backendRefs:
        - name: radarr
          namespace: media
          port: 7878
